created migration script for easier installation

--- a/conf/config.ini
+++ b/conf/config.ini
@@ -9,7 +9,7 @@ chroma_data = ./DATA/chroma_data
 vector_store = ./DATA/vector_store
 
 [python]
-interpreter = python/.venv/Scripts/python.exe
+interpreter = python\.venv\Scripts\python.exe
 # Use Python 3.9 from virtual environment for better PDF text extraction
 # Created using the installvenv.sh script in the python directory
 
@@ -33,7 +33,7 @@ database-host = 172.16.16.26
 database-port = 5432
 database-user = postgres
 database-password = root
-database-name = copilot
+database-name = copilot-test
 max_connections = 100
 log_queries = false
 ssl = false
