fixing rag in updated codebase

--- a/conf/config.ini
+++ b/conf/config.ini
@@ -38,6 +38,13 @@ max_connections = 100
 log_queries = false
 ssl = false
 
+[Docker]
+# ChromaDB Docker container details
+docker-chromadb-protocol = http 
+docker-chromadb-host = localhost
+docker-chromadb-port = 8000
+
+
 [security]
 secret_key = change_this_to_a_secure_secret
 cookie_secure = false
@@ -76,8 +83,6 @@ default_theme = light
 [mcp-server]
 mcp_terminal_info_endpoint = /info
 #endpoint to get the terminal info
-
-
 
 mcp_terminal_name_1 = mcp-terminal_executor
 mcp_terminal_command_1 = curl -o- https://raw.githubusercontent.com/Yaswanth-ampolu/smithery-mcp-server/main/main/install-mcp.sh | bash
