--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "dev:client": "cd client && npm run build -- --watch",
     "dev:script": "node src/scripts/dev.js",
     "apply:schema": "node src/scripts/apply_chat_sessions_schema.js",
+    "install:database": "node src/scripts/install-database.js",
+    "validate:database": "node src/scripts/validate-database.js",
+    "db:migrate": "node src/scripts/migrate.js",
+    "setup:database": "node src/scripts/setup-database.js",
     "test": "jest"
   },
   "dependencies": {
@@ -26,7 +30,6 @@
     "eventsource": "^2.0.2",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "fastapi": "^0.0.8",
     "ini": "^4.1.3",
     "langchain": "^0.3.26",
     "mammoth": "^1.9.0",
