--- a/conf/config.ini
+++ b/conf/config.ini
@@ -29,11 +29,11 @@ serve_from_sub_path = false
 
 # PostgreSQL configuration
 database-type = postgres
-database-host = 172.16.16.26
+database-host = localhost
 database-port = 5432
 database-user = postgres
 database-password = root
-database-name = copilot-test
+database-name = copilot
 max_connections = 100
 log_queries = false
 ssl = false
