--- a/conf/config.ini
+++ b/conf/config.ini
@@ -9,7 +9,7 @@ chroma_data = ./DATA/chroma_data
 vector_store = ./DATA/vector_store
 
 [python]
-interpreter = python\.venv\Scripts\python.exe
+interpreter = python/venv/bin/python
 # Use Python 3.9 from virtual environment for better PDF text extraction
 # Created using the installvenv.sh script in the python directory
 
@@ -32,7 +32,7 @@ database-type = postgres
 database-host = localhost
 database-port = 5432
 database-user = postgres
-database-password = root
+database-password = Welcom@123
 database-name = copilot
 max_connections = 100
 log_queries = false
