--- a/python/PREDICTION-MODULE/requirements.txt
+++ b/python/PREDICTION-MODULE/requirements.txt
@@ -17,7 +17,6 @@ h5py==3.13.0
 idna==3.10
 joblib==1.5.0
 keras==3.10.0
-keras-nightly==3.10.0.dev2025052003
 libclang==18.1.1
 Markdown==3.8
 markdown-it-py==3.0.0
@@ -31,6 +30,7 @@ optree==0.15.0
 packaging==25.0
 pandas==2.2.3
 psutil==7.0.0
+psycopg2-binary==2.9.9
 pydantic==2.11.4
 pydantic_core==2.33.2
 Pygments==2.19.1
@@ -45,10 +45,10 @@ six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.41
 starlette==0.46.2
-tb-nightly==2.19.0a20250218
+tensorboard==2.18.0
 tensorboard-data-server==0.7.2
 termcolor==3.1.0
-tf_nightly==2.20.0.dev20250516
+tensorflow==2.18.0
 threadpoolctl==3.6.0
 typing-inspection==0.4.0
 typing_extensions==4.13.2
