fixed runshellcommnd properties

--- a/conf/config.ini
+++ b/conf/config.ini
@@ -9,14 +9,14 @@ chroma_data = ./DATA/chroma_data
 vector_store = ./DATA/vector_store
 
 [python]
-interpreter = ./python/venv/bin/python
+interpreter = python\.venv\Scripts\python.exe
 # Use Python 3.9 from virtual environment for better PDF text extraction
 # Created using the installvenv.sh script in the python directory
 
 [server]
 protocol = http
 domain = localhost
-port = 5657
+port = 5634
 static_root_path = ./client/build
 serve_from_sub_path = false
 
@@ -41,7 +41,7 @@ ssl = false
 [Docker]
 # ChromaDB Docker container details
 docker-chromadb-protocol = http 
-docker-chromadb-host = localhost
+docker-chromadb-host = 172.16.16.54
 docker-chromadb-port = 8000
 
 
