--- a/conf/config.ini
+++ b/conf/config.ini
@@ -16,7 +16,7 @@ interpreter = python/venv/bin/python
 [server]
 protocol = http
 domain = localhost
-port = 5657
+port = 5650
 static_root_path = ./client/build
 serve_from_sub_path = false
 
@@ -32,7 +32,7 @@ database-type = postgres
 database-host = localhost
 database-port = 5432
 database-user = postgres
-database-password = Welcom@123
+database-password = root
 database-name = copilot
 max_connections = 100
 log_queries = false
